{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 8,
  "lineage": "5abe6f3c-5da2-0d93-9295-1f90c9c257b6",
  "resources": [
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "imported_igw",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "igw-050804702a94a3a40",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:internet-gateway/igw-050804702a94a3a40",
            "id": "igw-050804702a94a3a40",
            "owner_id": "637423584491",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-059d612141a064cd2"
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "imported_nat",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "imported_rt",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-024acecdd50fb5574",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:route-table/rtb-024acecdd50fb5574",
            "id": "rtb-024acecdd50fb5574",
            "owner_id": "637423584491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050804702a94a3a40",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-rtb-public"
            },
            "tags_all": {
              "Name": "project-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-059d612141a064cd2"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "rtb-08825936734f9df96",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:route-table/rtb-08825936734f9df96",
            "id": "rtb-08825936734f9df96",
            "owner_id": "637423584491",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-rtb-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "project-rtb-private1-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-059d612141a064cd2"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "rtb-0c71606b18807d332",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:route-table/rtb-0c71606b18807d332",
            "id": "rtb-0c71606b18807d332",
            "owner_id": "637423584491",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-059d612141a064cd2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imported_sg",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-0acfc84c40e502b47",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:security-group/sg-0acfc84c40e502b47",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acfc84c40e502b47",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423584491",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-059d612141a064cd2"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "imported_subnet",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0d32bb791f1c42dfa",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:subnet/subnet-0d32bb791f1c42dfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d32bb791f1c42dfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423584491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "project-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-059d612141a064cd2"
          }
        },
        {
          "index_key": "subnet-0eceb65b434999dbd",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:subnet/subnet-0eceb65b434999dbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eceb65b434999dbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423584491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "project-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-059d612141a064cd2"
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "imported_vpc",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-059d612141a064cd2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:vpc/vpc-059d612141a064cd2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad9901be797f32a2",
            "default_route_table_id": "rtb-0c71606b18807d332",
            "default_security_group_id": "sg-0acfc84c40e502b47",
            "dhcp_options_id": "dopt-0b4582e7bce911cb8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059d612141a064cd2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c71606b18807d332",
            "owner_id": "637423584491",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}